--- a/pages/calculos/calcular_textura.html
+++ b/pages/calculos/calcular_textura.html
@@ -267,37 +267,6 @@
     </section>
     <script src="../../assets/js/calculos/textura.js"></script>
     
-    <!-- Condiciones de texturas en el triángulo textural
-
-El triángulo textural es un gráfico que se utiliza para clasificar la textura del suelo según el porcentaje de arena, limo y arcilla que contiene. Las condiciones de textura en el triángulo textural son las siguientes:
-
-Arena: Las partículas de arena son las más grandes, con un diámetro de 0.05 a 2.0 mm. Los suelos arenosos son sueltos, permeables y fáciles de trabajar. Sin embargo, retienen poca agua y nutrientes.
-Limo: Las partículas de limo tienen un diámetro de 0.002 a 0.05 mm. Los suelos limosos son suaves y sedosos al tacto. Tienen una buena capacidad de retención de agua y nutrientes, pero son menos permeables que los suelos arenosos.
-Arcilla: Las partículas de arcilla son las más pequeñas, con un diámetro de menos de 0.002 mm. Los suelos arcillosos son compactos y difíciles de trabajar. Tienen una alta capacidad de retención de agua y nutrientes, pero son poco permeables.
-La textura del suelo se determina trazando una línea vertical desde el porcentaje de arena en el eje horizontal hasta el porcentaje de arcilla en el eje vertical. El punto donde la línea intersecta el eje limo indica el porcentaje de limo en el suelo.
-
-Las principales condiciones de textura en el triángulo textural son las siguientes:
-
-Arenosa: Los suelos arenosos tienen más del 70% de arena.
-Franco arenosa: Los suelos franco arenosos tienen entre 45% y 70% de arena.
-Franco: Los suelos francos tienen entre 25% y 45% de arena, entre 20% y 40% de limo, y entre 20% y 40% de arcilla.
-Franco limosa: Los suelos franco limosos tienen entre 25% y 45% de arena, entre 40% y 60% de limo, y entre 15% y 25% de arcilla.
-Franco arcillosa: Los suelos franco arcillosos tienen entre 25% y 45% de arena, entre 20% y 40% de limo, y entre 35% y 55% de arcilla.
-Arcillosa: Los suelos arcillosos tienen más del 35% de arcilla.
-La textura del suelo es un factor importante que determina la capacidad del suelo para retener agua y nutrientes, así como su facilidad de trabajo. Los suelos con una textura adecuada son más productivos y requieren menos cuidados. -->
-
-    <!-- arcillosa: %arcilla de 55 a 100, %limo de 0 a 40,  %arena de 60 a 100
-          arcilloso arenosa: %arcilla de 35 a 55, %limo de 45 a 65,  %arena de 45 a 65
-          ARCILLO LIMOSA: %arcilla de 40 a 60, %limo de 40 a 60,  %arena de 0 a 20
-          FRANCO ARCILLOSA: %arcilla de 27 a 40, %limo de 60 a 73,  %arena de 20 a 45
-          FRANCO ARCILLO LIMOSA: %arcilla de 27 a 40, %limo de 60 a 73,  %arena de 0 a 20
-          FRANCO ARCILLO ARENOSA: %arcilla de 20 a 35, %limo de 65 a 80,  %arena de 45 a 80
-          FRANCO: %arcilla de 7 a 27, %limo de 28 a 50,  %arena de 23 a 52
-          FRANCO ARENOSA: %arcilla de 0 a 20, %limo de 0 a 50,  %arena de 43 a 85
-          FRANCO LIMOSA: %arcilla de 0 a 27, %limo de 50 a 87,  %arena de 0 a 50
-          LIMOSA: %arcilla de 0 a 13, %limo de 80 a 100,  %arena de 0 a 20
-          ARENO FRANCOSA: %arcilla de 0 a 15, %limo de 0 a 30,  %arena de 70 a 90
-          ARENOSA: %arcilla de 0 a 10, %limo de 0 a 15,  %arena de 85 a 100 -->
     <section class="row mb-4">
       <div class="row col-md-12 mx-auto">
 
@@ -315,6 +284,9 @@ La textura del suelo es un factor importante que determina la capacidad del suel
                 <div class="col-lg">
                   <div class="input-group input-group-static">
                     <input type="text" class="form-control" id="resultado_textura" readonly>
+                  </div>
+                  <div class="input-group input-group-static">
+                    <input type="text" class="form-control" id="grupoTexturaInput" readonly>
                   </div>
                 </div>
               </div>
