--- a/pages/calculos/calcular_fertilidad.html
+++ b/pages/calculos/calcular_fertilidad.html
@@ -242,8 +242,8 @@
           <div class="tambaleo mt-4 col-lg-6">
             <div class="col p-5 card opacity-9">
               <div class="container">
-                <div class="mt-n6 w-2" style="background-color: #cccccc;height: 40px; border: 1px solid rgb(0, 0, 0); float: left; border-radius: 7px;"></div>
-                <div class="mt-n6 w-2" style="background-color: #cccccc;height: 40px; border: 1px solid rgb(0, 0, 0); float: right; border-radius: 7px;"></div>  
+                <img src="../../assets/img/SVG/anillado.svg" class="mt-n6 " style="height: 45px; min-height: 45px; float: left;">
+                <img src="../../assets/img/SVG/anillado.svg" class="mt-n6" style="height: 45px; min-height: 45px; float: right;">
               </div>
               <h3 class=" text-center">Horizonte 1</h2>
               <div class=" container">
@@ -351,8 +351,8 @@
         <div class="tambaleo mt-4 col-lg-6 ">
           <div class="col p-5 card opacity-9">
             <div class="container">
-              <div class="mt-n6 w-2" style="background-color: #cccccc;height: 40px; border: 1px solid rgb(0, 0, 0); float: left; border-radius: 7px;"></div>
-              <div class="mt-n6 w-2" style="background-color: #cccccc;height: 40px; border: 1px solid rgb(0, 0, 0); float: right; border-radius: 7px;"></div>  
+              <img src="../../assets/img/SVG/anillado.svg" class="mt-n6 " style="height: 45px; min-height: 45px; float: left;">
+              <img src="../../assets/img/SVG/anillado.svg" class="mt-n6" style="height: 45px; min-height: 45px; float: right;">
             </div>
             <h3 class=" text-center">Horizonte 2</h2>
             <div class="container">
