--- a/pages/calculos/calcular_textura.html
+++ b/pages/calculos/calcular_textura.html
@@ -51,7 +51,7 @@
   
 </head>
 
-<body class="blog-author " style="background-image: url('../../assets/img/fondo.jpg'); background-size: cover; background-repeat: no-repeat;background-attachment: fixed">
+<body class="blog-author " style="background-image: url('../../assets/img/fondo\ \(2\).jpg'); background-size: cover; background-repeat: no-repeat;background-attachment: fixed">
   <!-- <video id="miVideo" src="../../assets/img/video (1).mp4"  autoplay="true" muted="true" loop="true" poster="../../assets/img/fondobg.png"></video>
   <style>
     video {
@@ -182,7 +182,7 @@
   </div>
   <!-- fin Navbar -->
 
-  <div class="card1 card-body mx-3 mx-md-8 mt-8 mb-4">
+  <div class="card1 card-body mx-3 mx-md-8 mt-7 opacity-9 mb-4">
 
     <!-- CARD -->
 
