--- a/pages/calculos/calcular_textura.html
+++ b/pages/calculos/calcular_textura.html
@@ -47,7 +47,7 @@
   <link href="
   https://cdn.jsdelivr.net/npm/sweetalert2@11.7.28/dist/sweetalert2.min.css
   " rel="stylesheet">
-  
+  <link rel="stylesheet" href="../../assets/css/intro.css">
   
 </head>
 
@@ -187,9 +187,17 @@
     <!-- CARD -->
 
 
-    <section class="row card">
+    <section class="card">
+      <div class=" container pt-3" style="height: 60px; width: 50px; position: absolute; right: 10px; top: 10px;">
+        <div onclick="intro_calcular()">
+          <button class="btn bg-gradient-info btn-icon-only btn-rounded pt-0 btn-outline-success btn-xxl" data-bs-toggle="tooltip" data-bs-placement="left" style="position: absolute; top: 10px; left: 0px; border: 2px solid white;" aria-label="Instrucciones de uso" data-bs-original-title="Iniciar recorrido">
+            <i class="fas fa-play mt-2 pt-1 mx-auto" aria-hidden="true"></i>
+          </button>
+        </div>
+      
+      </div>
       <div class="container-fluid">
-        <div class="row">
+        <div  id="intro1" class="row">
           <div class="col-10 mx-auto border-radius-lg">
             <div class="row">
               <h3 class="text-center mt-4" id="animate-text1">Cálculo de la Textura</h4>
@@ -351,8 +359,8 @@
         <div class="mt-4 col-lg-8 ">
           <div class="card">
             <div class="container">
-              <img src="../../assets/img/SVG/anillado.svg" class="mt-n3 w-3 ms-6" style="height: 45px; min-height: 45px; float: left;">
-              <img src="../../assets/img/SVG/anillado.svg" class="mt-n3 w-3 me-6" style="height: 45px; min-height: 45px; float: right;">
+              <img src="../../assets/img/SVG/anillado.svg" class="mt-n3 ms-6" style="height: 45px; min-height: 45px; float: left;">
+              <img src="../../assets/img/SVG/anillado.svg" class="mt-n3 me-6" style="height: 45px; min-height: 45px; float: right;">
             </div>
             <h3 class=" text-center mt-2">Representación en el triangulo de texturas</h2>
             <div class="">
@@ -523,7 +531,6 @@
   <script src="../../assets/js/core/popper.min.js" type="text/javascript"></script>
   <script src="../../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
   <script src="../../assets/js/plugins/perfect-scrollbar.min.js"></script>
-  <script src="../../assets/js/inventario.js"></script>
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
@@ -534,6 +541,7 @@
  
   <script src="../../assets/js/localstorage.js"></script>
   <script src="../../assets/js/config.js"></script>
+  <script src="../../assets/js/intro_textura.js"></script>
 
 </body>
 
