logo flotante, mas intros

--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -474,8 +474,9 @@
 
   <!-- END CARD -->
   </div>
-
-
+<div id="popup" style="width: 100px; position: fixed; right: 15px;bottom: 10px;">
+ <img class="mt-n1 border-radius-2xl" src="../assets/img/ecologo.png" alt="" style="width: 100%;">
+</div>
 
   <!-- -------- START FOOTER 5 w/ DARK BACKGROUND ------- -->
   <footer class="footer card bg-white opacity-9 mx-3 mx-md-8">
@@ -563,8 +564,8 @@
   <script src="../assets/js/config.js"></script>
   <script src="../assets/js/calculos/calcular-proceso.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/4.2.2/intro.min.js"></script>
-  <script src="../assets/js/instrucciones.js"></script>
-  
+  <script src="../assets/js/instrucciones/instrucciones.js"></script>
+
 
 </body>
 
