--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -54,7 +54,7 @@
   </script>
 </head>
 <body class="blog-author"
-  style="background-image: url('../assets/img/fondocampo.jpg'); background-size: cover; background-repeat: no-repeat;background-attachment: fixed">
+  style="background-image: url('../assets/img/bosques.1.jpg'); background-size: cover; background-repeat: no-repeat;background-attachment: fixed">
   <!-- <video src="../assets/img/video (1).mp4" autoplay="true" muted="true" loop="true" poster="../assets/img/fondobg.jpg"></video>
 
   <style>
