--- a/index.html
+++ b/index.html
@@ -534,35 +534,35 @@
 
 
 <!--   Core JS Files   -->
-<script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<script src="./assets/js/plugins/perfect-scrollbar.min.js"></script>
+<script src="assets/js/core/popper.min.js" type="text/javascript"></script>
+<script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/js/plugins/perfect-scrollbar.min.js"></script>
 
 
 
 
 <!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
-<script src="./assets/js/plugins/countup.min.js"></script>
+<script src="assets/js/plugins/countup.min.js"></script>
 
 
 
 
 
-<script src="./assets/js/plugins/choices.min.js"></script>
+<script src="assets/js/plugins/choices.min.js"></script>
 
 
 
-<script src="./assets/js/plugins/prism.min.js"></script>
-<script src="./assets/js/plugins/highlight.min.js"></script>
+<script src="assets/js/plugins/prism.min.js"></script>
+<script src="assets/js/plugins/highlight.min.js"></script>
 
 
 
 <!--  Plugin for Parallax, full documentation here: https://github.com/dixonandmoe/rellax -->
-<script src="./assets/js/plugins/rellax.min.js"></script>
+<script src="assets/js/plugins/rellax.min.js"></script>
 <!--  Plugin for TiltJS, full documentation here: https://gijsroge.github.io/tilt.js/ -->
-<script src="./assets/js/plugins/tilt.min.js"></script>
+<script src="assets/js/plugins/tilt.min.js"></script>
 <!--  Plugin for Selectpicker - ChoicesJS, full documentation here: https://github.com/jshjohnson/Choices -->
-<script src="./assets/js/plugins/choices.min.js"></script>
+<script src="assets/js/plugins/choices.min.js"></script>
 
 
 
@@ -584,7 +584,7 @@
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="./assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
+<script src="assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
 
 
 <script type="text/javascript">
