boton borrar datos

--- a/bd_ecosuelos/index2.html
+++ b/bd_ecosuelos/index2.html
@@ -16,7 +16,7 @@
         <button type="button" id="enviar">Registrar Pedido</button>
     </form>
 
-    <div  class="" style="background-color: aqua; height: auto; width: auto;">
+    <div  class="" style="background-color: rgb(0, 255, 106); height: auto; width: auto;">
     listado
     <div id="productos" class="">
 
