--- a/pages/clases.html
+++ b/pages/clases.html
@@ -60,7 +60,7 @@
         <div class="container-fluid px-0">
           <a class="navbar-brand font-weight-bolder ms-sm-3" href="../index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
             <img src="../assets/img/logo-ct-dark.png" alt="">
-          <span class="text-xxl">ECOsuelos</span> 
+          <span class="text-xxl">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</span> 
           </a>
           <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon mt-2">
@@ -326,7 +326,7 @@
           <div class="container">
               <div class="row g-5 align-items-center">
                   <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                      <p class="section-title text-start text-success pe-3" style="background-color: #fcfcfe;">ECOsuelos</p>
+                      <p class="section-title text-start text-success pe-3" style="background-color: #fcfcfe;">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</p>
                       <h1 class="mb-4"> Clase de Capacidad !</h1>
                       <p class="mb-4">La clase de capacidad agrupa suelos que presentan el mismo grado relativo de limitaciones generales y  de riesgos.</p>
                       <p class="mb-4">Los criterios para clasificar los suelos por su capacidad de uso al nivel de clase se analizan y describen 
