--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/logo-ct-dark.png">
   <link rel="icon" type="image/png" href="assets/img/logo-ct-dark.png">
   <title>
-    ECOsuelos
+      <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
@@ -60,7 +60,7 @@
         <div class="container-fluid px-0">
           <a class="navbar-brand font-weight-bolder ms-sm-3" href="index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
             <img src="assets/img/logo-ct-dark.png" alt="">
-          <span class="text-xxl">ECOsuelos</span> 
+          <span class="text-xxl">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</span> 
           </a>
           <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon mt-2">
@@ -190,7 +190,7 @@
                   </div>
               </div>
               <div class="col-lg-6 wow fadeIn">
-                  <h1 class=" text-success pe-3" style="background-color: #fcfcfe;">Bienvenidos a ECOsuelos</p>
+                  <h1 class=" text-success pe-3" style="background-color: #fcfcfe;">Bienvenidos a   <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</p>
                   <h3 class="mb-4">¿Qué es el suelo?</h1>
                   <h3 class="lead mb-4">El suelo es un componente fundamental del ambiente, natural y finito, constituido por minerales, aire, agua, materia orgánica, macro y micro-organismos que desempeñan procesos permanentes de tipo biótico y abiótico, cumpliendo funciones vitales para la sociedad y el planeta.</h3>
                   <div class="row g-5 pt-2 mb-5">
@@ -208,7 +208,7 @@
     <div class="container">
         <div class="row g-5 align-items-center">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                <p class="section-title   text-start text-success pe-3"style="background-color: #fcfcfe; ">ECOsuelos</p>
+                <p class="section-title   text-start text-success pe-3"style="background-color: #fcfcfe; ">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</p>
                 <h1 class="mb-4">Algunos tipos de textura de los suelos son:</h1>
                 <!--p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p-->
                 <p><i class="fa fa-check text-success me-3"></i>Tipo De Suelo: Arenoso</p>
@@ -252,7 +252,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="section-title   text-center text-success px-3"style="background-color: #fcfcfe; ">ECOsuelos</p>
+                <p class="section-title   text-center text-success px-3"style="background-color: #fcfcfe; ">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</p>
                 <h1 class="mb-5">Mensajes alusivos a los suelos. </h1>
             </div>
             <div class="row gy-5 gx-4">
@@ -373,7 +373,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="section-title   text-center text-success px-3"style="background-color: #fcfcfe; ">ECOsuelos</p>
+                <p class="section-title   text-center text-success px-3"style="background-color: #fcfcfe; ">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</p>
                 <h1 class="mb-5">Imagenes de algunos cultivos.</h1>
             </div>
             <div class="row gx-4">
@@ -423,7 +423,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="section-title text-center text-success px-3"style="background-color: #fcfcfe; ">ECOsuelos</p>
+                <p class="section-title text-center text-success px-3"style="background-color: #fcfcfe; ">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</p>
                 <h1 class="mb-5">Algunos tipos de suelos que debes conocer.</h1>
             </div>
             <div class="row g-4">
