--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -77,7 +77,7 @@
         <div class="container-fluid px-0">
           <a class="navbar-brand font-weight-bolder ms-sm-3" href="../index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
             <img src="../assets/img/logo-ct-dark.png" alt="">
-          <span class="text-xxl">ECOsuelos</span> 
+          <span class="text-xxl">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</span> 
           </a>
           <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon mt-2">
@@ -494,22 +494,21 @@
 
   <!-- -------- START FOOTER 5 w/ DARK BACKGROUND ------- -->
   <footer class="footer card bg-white opacity-9 mx-3 mx-md-8">
-    <div class="container">
-      <div class="mt-4 row">
-        <div class="col-md-3 ms-auto">
-          <div>
-            <!-- <a href="index.html">
-              <img src="../assets/img/logo_maiz.png" class="mb-4" alt="main_logo" style="width:40px; margin-left:32px">
-            </a> -->
-            <h5 class="font-weight-bolder mt-5 ms-3 me-3 mb-4"><span class="text-dark font-weight-bold"><span
-                  class="text-success">ECO</span>suelos</span></h5>
-          </div>
-        </div>
+		<div class="container mt-5">
+			<div class="row">
+				<div class="col-md-3  col-sm-6 col-6 my-auto">
+					<a href="../index.html">
+            <h5 class="font-weight-bolder mb-4">
+              <img src="../assets/img/logo-ct-dark.png" alt="">
+              <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</span>
+            </h5>
+          </a>
+				</div>
 
-        <div class="col-md-2 col-sm-6 col-6 mb-4">
-          <div>
-            <h6 class="text-sm">Paginas</h6>
-            <ul class="flex-column ms-n3 nav">
+				<div class="col-md-3 col-sm-6 col-6 mb-4">
+					<div>
+						<h6 class="text-sm">Páginas</h6>
+						<ul class="flex-column ms-n3 nav">
               <li class="nav-item">
                 <a class="nav-link" href="suelo.html">
                   Suelo
@@ -526,41 +525,41 @@
                 </a>
               </li>
             </ul>
-          </div>
-        </div>
+					</div>
+				</div>
 
-        <div class="col-md-4 col-sm-5 col-6 mb-4">
-          <div>
-            <h6 class="text-sm">Contacto</h6>
-            <ul class="flex-column ms-n3 nav">
-              <li class="nav-item">
-                <a class="nav-link">
-                  Centro Biotecnológico del Caribe (CBC).
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">
-                  Km 7 via la paz
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">
-                  Valledupar - Cesar
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+				<div class="col-md-3 col-sm-6 col-6 mb-4">
+					<div>
+						<h6 class="text-sm">Contacto</h6>
+						<ul class="flex-column ms-n3 nav">
+							<li class="nav-item">
+								<a id="cambio41" class="nav-link">
+									Centro Biotecnológico del Caribe (CBC).
+								</a>
+							</li>
+							<li class="nav-item">
+								<a id="cambio42" class="nav-link"> Km 7 via la paz </a>
+							</li>
+							<li class="nav-item">
+								<a id="cambio43" class="nav-link"> Valledupar - Cesar </a>
+							</li>
+						</ul>
+					</div>
+				</div>
 
-        <div class="col-md-3 col-sm-6 col-6 mb-4 d-flex flex-column justify-content-center align-items-center">
-          <h6 class="text-sm text-success">Eres usuario o administrador</h6>
-          <a href="{{ route('login') }}" class="btn btn-sm bg-gradient-success mb-0 me-1 mt-2 mt-md-0">Iniciar
-            Sesion</a>
-        </div>
-
-      </div>
-    </div>
-  </footer>
+				
+				<div class="col-md-3 col-sm-6 col-6 mb-4 d-flex flex-column mx-auto align-items-center">
+					<i class="material-icons opacity-6 me-2 text-success" style="font-size: 50px;">android</i>
+					<h6 class="text-sm text-dark">PRUEBA NUESTRA APP MOVIL</h6>
+					<a href="https://apk.e-droid.net/apk/app2899003-eyqk47.apk?v=2" class="btn btn-sm bg-gradient-success mb-0 me-1 mt-2 mt-md-0">
+						<i class="material-icons opacity-6 me-2 text-md">download</i>
+						<span>descargar</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	
+	</footer>
   <!-- -------- END FOOTER 5 w/ DARK BACKGROUND ------- -->
   <!--   Core JS Files   -->
   <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
