--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 <a role="button" class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs"
                   data-bs-toggle="dropdown" aria-expanded="false">
                   Grupos
-                  <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
-                  <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow"
+                  <img src="assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
+                  <img src="assets/img/down-arrow-dark.svg" alt="down-arrow"
                     class="arrow ms-1 d-lg-none d-block ms-auto">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md mt-0 mt-lg-3 p-3 border-radius-lg"
@@ -149,10 +149,10 @@
                   <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Calcular">Calcular Proceso</p>
                 </a>
               </li>
-              <li class="nav-item my-auto ms-3 ms-lg-0">
-                
-                <a href="pages/calcular.html" class="btn btn-sm  bg-gradient-success  mb-0 me-1 mt-2 mt-md-0">Ingresar</a>
-                
+            </ul>
+            <ul class="navbar-nav d-lg-block d-none">
+              <li class="nav-item">
+                <a href="calcular.html" class="btn btn-sm bg-gradient-success mb-0" >Ingresar</a>
               </li>
             </ul>
           </div>
