--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -75,7 +75,7 @@
     <div class="col-12">
       <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
         <div class="container-fluid px-0">
-          <a class="navbar-brand font-weight-bolder ms-sm-3" href="/index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
+          <a class="navbar-brand font-weight-bolder ms-sm-3" href="../index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
             <img src="../assets/img/logo-ct-dark.png" alt="">
           <span class="text-xxl">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</span> 
           </a>
@@ -289,10 +289,10 @@
                     </label>
                     <div class="row">
                       <div class="input-group col input-group-static">
-                        <input type="text" class="form-control bg-gray-200" id="resultadoMovMasa" placeholder="complete este campo"  readonly>
+                        <input type="text" class="form-control bg-gray-200" id="resultadoMovMasa" placeholder="complete este campo" readonly>
                       </div>
                       <div class="input-group col input-group-static">
-                        <input type="text" class="form-control" id="movimientosEnMasa" value="No hay" placeholder="complete este campo"  >
+                        <input type="text" class="form-control" id="movimientosEnMasa" value="No hay" placeholder="complete este campo">
                       </div>
                     </div>
                   </div>
